--- a/themes/fluid/languages/zh-CN.yml
+++ b/themes/fluid/languages/zh-CN.yml
@@ -21,15 +21,15 @@ home:
 
 archive:
   title: 归档
-  subtitle: 归档
+  subtitle: 归档 - 所有的所有都在这儿了
 
 tag:
   title: 标签
-  subtitle: 标签
+  subtitle: 标签 - 找找你想要的
 
 category:
   title: 分类
-  subtitle: 分类
+  subtitle: 分类 - 是不是比较杂？#打字机
 
 about:
   title: 关于
